<resources>
    <string name="app_name">Moira</string>

    <string name="title_home">홈</string>
    <string name="title_job_offer">구인구직</string>
    <string name="title_study">스터디</string>
    <string name="title_menu">전체</string>

    <string name="title_login">로그인</string>
    <string name="title_register">회원가입</string>

    <string name="text_id">아이디</string>
    <string name="text_pw">비밀번호</string>
    <string name="text_name">이름</string>
    <string name="text_grade">학년</string>
    <string name="text_contact">전화번호</string>
    <string name="text_email">이메일</string>

    <string name="text_profile_change">프로필 편집</string>

    <string name="text_job_offer_list">구인구직 목록</string>
    <string name="text_job_offer_apply">구인구직 등록</string>
    <string name="text_job_offer_detail">구인구직 상세보기</string>

    <string name="text_study_list">스터디 목록</string>
    <string name="text_study_apply">스터디 등록</string>
    <string name="text_study_detail">스터디 상세보기</string>

    <string name="text_more">더보기</string>
</resources>