<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dgsw.hackathon.moira.view.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_job_offer"
        android:name="com.dgsw.hackathon.moira.view.fragment.JobOfferFragment"
        android:label="@string/title_job_offer"
        tools:layout="@layout/fragment_job_offer" />

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.dgsw.hackathon.moira.view.fragment.StudyFragment"
        android:label="@string/title_study"
        tools:layout="@layout/fragment_study" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.dgsw.hackathon.moira.view.fragment.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />
</navigation>