<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activtiy.RegisterActivity">

    <data>
        <variable
            name="viewModel"
            type="com.dgsw.hackathon.moira.viewmodel.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="bottom"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_register"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_person"/>

                <com.google.android.material.textfield.TextInputLayout
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/text_id"
                        android:maxLength="20"
                        android:text="@={viewModel.id}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_lock"/>

                <com.google.android.material.textfield.TextInputLayout
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/text_pw"
                        android:maxLength="20"
                        android:inputType="textPassword"
                        android:text="@={viewModel.pw}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_people"/>

                <com.google.android.material.textfield.TextInputLayout
                    app:counterEnabled="true"
                    app:counterMaxLength="5"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/text_name"
                        android:maxLength="5"
                        android:inputType="text"
                        android:text="@={viewModel.name}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_study"/>

                <com.google.android.material.textfield.TextInputLayout
                    app:counterEnabled="true"
                    app:counterMaxLength="2"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/text_grade"
                        android:maxLength="2"
                        android:inputType="number"
                        android:text="@={viewModel.grade}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_local_phone"/>

                <com.google.android.material.textfield.TextInputLayout
                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/text_contact"
                        android:maxLength="11"
                        android:inputType="number"
                        android:text="@={viewModel.contact}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_email"/>

                <com.google.android.material.textfield.TextInputLayout
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/text_email"
                        android:maxLength="20"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="80dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_round"
                android:onClick="@{() -> viewModel.registerClick()}"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/title_register"/>
        </LinearLayout>
    </LinearLayout>
</layout>