<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activtiy.LoginActivity">

    <data>
        <variable
            name="viewModel"
            type="com.dgsw.hackathon.moira.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="bottom"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="25sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/background_search"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="편리한 구인구직 및 스터디 그룹 찾기 플랫폼"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Moira"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_person"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/text_id"
                        android:text="@={viewModel.id}"
                        android:maxLength="20"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_lock"/>

                <com.google.android.material.textfield.TextInputLayout
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/text_pw"
                        android:maxLength="20"
                        android:inputType="textPassword"
                        android:text="@={viewModel.pw}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="@{() -> viewModel.loginClick()}"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_round"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/title_login"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Moira는 처음이신가요?"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:onClick="@{() -> viewModel.registerClick()}"
                    android:padding="5dp"
                    android:text="회원가입"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
